# Titan

./: .env  .gitignore  Cargo.nix  Cargo.toml  application.yml  build.rs  flake.nix  log.db  readme.md  readme.org  result-bin
.github/workflows/: rust.yml
docker/: docker-compose.yaml
documentation/: tasks.md  tasks.org
documentation/My Actix API/: bruno.json
documentation/My Actix API/environments/: local.bru
migrations/: 20250623160518_active_log.sql  20250629125842_create_schema.sql
migrations/postgres/: 20250704155028_new_script.sql  20250705072322_log_grouping.sql  20250705072326_regex_parsing_rules.sql
migrations/sqlite/: 20250704155028_new_script.sql  20250705071140_log_grouping.sql  20250705071240_regex_parsing_rules.sql
src/: actor_factory_actor.rs  lib.rs  main.rs  version.rs
src/actors/: broadcast.rs  broadcast_actor.rs  dispatch_actor.rs  iceberg_actor.rs  init.rs  mod.rs  parquet_creator.rs  parser_actor.rs  parsing.rs  regex.rs  wal.rs  wal_actor.rs  wal_writter.rs
src/api/: mod.rs
src/api/flight/: service.rs
src/application/: mod.rs
src/config/: database.rs  flight.rs  mod.rs  yaml_reader.rs
src/core/: mod.rs
src/infrastructure/: actor_factory.rs  mod.rs
src/logging/: file_writer.rs  mod.rs  subscriber.rs
src/platform/: actor_factory.rs  actor_factory_test.rs  mod.rs
src/schema/: mod.rs  wal_schema.fbs  wal_schema_generated.rs
src/servers/: flight_server.rs  full_server.rs  injest_server.rs  mod.rs  query_server.rs  server.rs
src/utils/: cksum.rs  mod.rs  transformers.rs
src/wal/: layout.rs  writer.rs
(+73 files in other folders)
