[package]
name = "poros"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tokio = {version = "1.45.1", features = ["macros", "rt-multi-thread", "fs"]}

# observability
tracing = {version = "0.1.41"}
tracing-subscriber = {version = "0.3.19", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "=0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.18"