[package]
name = "poros"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.11.0"
tokio = {version = "1.45.1", features = ["macros", "rt-multi-thread", "fs"]}
tonic = "0.12.3"

# observability
tracing = {version = "0.1.41"}
tracing-subscriber = {version = "0.3.19", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "=0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.18"

# security
secrecy = { version = "0.10.3", features = ["serde"] }

# serializers
serde = "1.0.219"
serde_derive = "1.0.219"
config = { version = "0.15.11", features = ["yaml"] } # read yaml, json file
arrow = {version = "=53.2.0"}
arrow-array = "=53.2.0"
arrow-flight = "=53.2.0"
arrow-ipc = "=53.2.0"
arrow-schema = "=53.2.0"
chrono = "=0.4.38"
futures-util = "0.3.31"
futures = "0.3.31"
flatbuffers = "25.2.10"
tempfile = "3.20.0"
crc32fast = "1.4.2"
bytemuck = "1.14"

